--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -26,6 +26,9 @@
     "dependencies": {
         "dotenv": "^16.0.0",
         "mobx": "^6.5.0",
+        "mobx-react": "^7.3.0",
+        "mobx-react-lite": "^3.3.0",
+        "react-bootstrap": "^2.2.3",
         "react-router-dom": "^6.3.0"
     }
 }
