--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.6.0",
         "dotenv": "^16.0.0",
         "mobx": "^6.5.0",
         "mobx-react": "^7.3.0",
